--- a/stylesheets/crt-vfx.css
+++ b/stylesheets/crt-vfx.css
@@ -31,7 +31,6 @@
 }
 
 #press-start-overlay {
-    /* display: none; */
     position: absolute;
     width: 100%;
     height: 100%;
@@ -40,5 +39,56 @@
     align-items: center;
     font-size: 2rem;
     text-shadow: var(--text-shadow-green);
-    z-index: 2000;
+    z-index: 1999;
+    /*pressStart.js*/
+    display: flex;
+    transform: scale(1, 1) translate3d(0, 0, 0);
+    filter: brightness(1);
+}
+
+@keyframes crt-transition {
+    0% {
+        transform: scale(1, 1) translate3d(0, 0, 0);
+        filter: brightness(1);
+        backdrop-filter: brightness(1);
+    }
+
+    10% {
+        transform: scale(4, 0.004) translate3d(0, 0, 0);
+    }
+
+    20% {
+        transform: scale(4, 0.004) translate3d(0, 0, 0);
+    }
+
+    40% {
+        transform: scale(8, 0.004) translate3d(0, 0, 0);
+        filter: brightness(16);
+        backdrop-filter: brightness(16);
+    }
+
+    60% {
+        transform: scale(0, 0.004) translate3d(0, 0, 0);
+    }
+
+    80% {
+        transform: scale(0, 0.004) translate3d(0, 0, 0);
+    }
+
+    100% {
+        transform: scale(0, 0.004) translate3d(0, 0, 0);
+        filter: brightness(32);
+        backdrop-filter: brightness(32);
+        height: 100%;
+    }
+}
+
+.crt-switch-off {
+    /* animation: crt-transition 0.32s cubic-bezier(0.4, 0, 0.2, 1) forwards; */
+    animation: crt-transition 0.32s forwards;
+
+}
+
+.crt-switch-on {
+    animation: crt-transition 0.16s reverse forwards;
 }
