--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -3,9 +3,18 @@
     /*fill vertical space*/
     /*DO NOT USE HEIGHT: 100%*/
     flex: 1;
-    z-index: 999;
     /*scroll setting*/
     overflow-y: auto;
     scrollbar-width: thin;
     scrollbar-color: var(--text-green) var(--bg-primary);
+    background-image: url(../images/background.svg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: max(100vh, 768px);
+    /*
+    pending animation
+    transform: translateY();
+    this can create film strip illusion
+    background-size: contain;
+    */
 }
