--- a/stylesheets/navi.css
+++ b/stylesheets/navi.css
@@ -1,6 +1,7 @@
 .navi-bar {
     height: clamp(var(--sub-navi-height), min(8vw, 8vh), var(--navi-height));
     width: 100%;
+    <<<<<<< HEAD
     /*Moved to navi-mask */
     /* border-bottom: var(--border-line); */
     flex-direction: row;
@@ -8,6 +9,10 @@
     justify-content: space-around;
     /*removed, such that sub-navi-mask will not cover sub-navi-track*/
     /* z-index: 1000; */
+    =======flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    >>>>>>>fd1931e (backup 4/2/2026)
 }
 
 .navi-bar * {
@@ -28,6 +33,8 @@
     height: 100%;
     align-items: center;
     justify-content: center;
+    <<<<<<< HEAD=======cursor: pointer;
+    >>>>>>>fd1931e (backup 4/2/2026)
 }
 
 .navi-item-text {
@@ -38,11 +45,18 @@
 .sub-navi-indicator {
     position: absolute;
     width: calc(100% + clamp(16px, 4vw, 8 * 64px));
-    height: 100%;
+    <<<<<<< HEAD height: 100%;
     border: var(--border-line);
     top: 50%;
     background-color: var(--bg-secondary);
     /*below sub-navi-mask*/
+    =======border: var(--border-line);
+    background-color: var(--bg-secondary);
+    /*added animation*/
+    /* height: 100%;
+    top: 50%; */
+    transition: all 0.08s ease-in;
+    >>>>>>>fd1931e (backup 4/2/2026)
     /*
     pending animation
     height: ;
@@ -50,37 +64,76 @@
     */
 }
 
-/*unify height of navi and sub-nav by tier [32, 48, 64]
-*/
+/*unify height of navi and sub-nav by tier [32, 48, 64]*/
 .sub-navi-indicator-mask,
+.sub-navi-container,
 .sub-navi-track,
 .sub-navi-item {
     height: clamp(32px, min(6vw, 6vh), var(--sub-navi-height));
 }
 
+/*hover to scroll*/
 .sub-navi-indicator-mask {
     width: 100%;
     background-color: var(--bg-secondary);
     border-bottom: var(--border-line);
+    /* cursor: pointer; */
 }
 
-/*hoverable*/
-.sub-navi-track {
+/*
+failure/pending: sub-navi-track overflow mask on edge
+*/
+
+.sub-navi-container {
     position: absolute;
     top: 100%;
+    left: 50%;
+    cursor: default;
+}
+
+/*movable*/
+.sub-navi-track {
     flex-direction: row;
-    align-items: flex-end;
-    justify-content: space-around;
-    /*above sub-navi-mask*/
+    width: 100%;
+    align-items: flex-start;
+    transform: translateX(1000%);
+    /*test attribute, blackboard first item devide 2 = -13.395px*/
+    transition: transform 0.16s ease-in;
+}
+
+.sub-navi-item {
+    position: relative;
+    align-items: center;
+    min-width: max-content;
+    /*avoid shift lines when spaces*/
+    margin-right: 32px;
+    /*hard coded, related to navi.js*/
 }
 
 /*clickable*/
-.sub-navi-item {
+.sub-navi-item-text {
     position: relative;
-    justify-content: center;
-    width: max-content;
+    padding: calc((clamp(32px, min(6vw, 6vh), var(--sub-navi-height)) - var(--font-size)) / 2) 0;
+    cursor: pointer;
 }
 
-.sub-navi-item-text {
-    padding: 0 clamp(16px, 2vw, 48px);
+/*manifest*/
+/* .sub-navi-indicator, */
+.sub-navi-track {
+    display: none;
+}
+
+/* .navi-item.active .sub-navi-indicator, */
+.navi-item.active .sub-navi-track {
+    display: flex;
+}
+
+.sub-navi-indicator {
+    height: 50%;
+    top: 100%
+}
+
+.navi-item.active .sub-navi-indicator {
+    height: 100%;
+    top: 50%
 }
