navi and page switch finished

--- a/stylesheets/layer.css
+++ b/stylesheets/layer.css
@@ -9,7 +9,8 @@
 #press-start-overlay {
     z-index: 1999;
     /* display: flex; */
-    display: none;
+    /*deactivate it for dev*/
+    /* display: none; */
 }
 
 /* navi.css */
