--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -17,4 +17,22 @@
     this can create film strip illusion
     background-size: contain;
     */
+    padding: calc(var(--header-height) / 4) var(--header-height);
+    transition: all 0.08s ease-in;
+}
+
+@media (max-width: 768px) {
+    .page-container {
+        padding: calc(var(--header-height) / 4) calc(var(--header-height) / 4);
+    }
+}
+
+.page {
+    width: 100%;
+    height: 100%;
+    display: none;
+}
+
+.page.active {
+    display: flex;
 }
