--- a/stylesheets/page.css
+++ b/stylesheets/page.css
@@ -23,13 +23,14 @@
 
 @media (max-width: 768px) {
     .page-container {
-        padding: calc(var(--header-height) / 4) calc(var(--header-height) / 4);
+        padding: calc(var(--header-height) / 2) calc(var(--header-height) / 2);
     }
 }
 
 .page {
     width: 100%;
     height: 100%;
+    font-weight: bold;
     display: none;
 }
 
