--- a/frontend/stylesheets/crt-vfx.css
+++ b/frontend/stylesheets/crt-vfx.css
@@ -18,6 +18,8 @@
     background-size: 100% var(--crt-line-width);
     /* top: -8px; */
     top: calc(var(--header-height) - (var(--crt-line-width) / 2));
+    /*Disable this for better immersion*/
+    mix-blend-mode: soft-light;
 }
 
 .crt-text-green * {
