--- a/frontend/stylesheets/page-blackboard-log.css
+++ b/frontend/stylesheets/page-blackboard-log.css
@@ -35,7 +35,8 @@
     top: 0px;
     left: 0px;
     width: fit-content;
-    height: 16rem;
+    height: 24rem;
+    white-space: nowrap;
     padding-bottom: 16px;
     border: var(--border-line);
     border-top: none;
