--- a/frontend/stylesheets/walkie-typie.css
+++ b/frontend/stylesheets/walkie-typie.css
@@ -205,3 +205,7 @@
 #walkie-typie-they-blackboard {
     font-size: var(--textbox-font-size);
 }
+
+.page[data-page="walkie-typie-text"].swapped {
+    flex-direction: column-reverse;
+}
